# refua-studio

./: .containerignore  .gitignore  Containerfile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml
e2e/: campaign-jobs.spec.ts  clinical.spec.ts  command-center.spec.ts  helpers.ts  lab-regulatory.spec.ts  promising-drugs.spec.ts  run_test_server.py  smoke.spec.ts
src/clawcures_ui/: __init__.py  __main__.py  app.py  bridge.py  cli.py  config.py  continuous_agent.py  drug_portfolio.py  runner.py  storage.py
src/clawcures_ui/static/: app.js  index.html  styles.css
src/refua_studio/: __init__.py  __main__.py  app.py  bridge.py  cli.py  config.py  drug_portfolio.py  program_store.py  runner.py  storage.py
src/refua_studio/static/: app.js  index.html  styles.css
tests/: test_api.py  test_bridge.py  test_compatibility.py  test_drug_portfolio.py  test_program_store.py  test_storage.py
