[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refua-studio"
version = "0.6.0"
description = "Web control plane for Refua campaign orchestration and scientific execution."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "JJ Ben-Joseph", email = "jj@tensorspace.ai"}]
keywords = [
  "drug discovery",
  "refua",
  "campaign",
  "control plane",
  "studio"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.2",
  "scipy>=1.13.0",
  "pyyaml>=6.0.1",
]

[project.urls]
Homepage = "https://agentcures.com/"
Repository = "https://github.com/agentcures/refua"
Documentation = "https://github.com/agentcures/refua#readme"
Issues = "https://github.com/agentcures/refua/issues"

[project.optional-dependencies]
dev = [
  "pre-commit>=4.5.1",
]

[project.scripts]
refua-studio = "refua_studio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
refua_studio = ["static/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.py[cod]", "__pycache__/*"]
